@@ -2,7 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Skip tests of unreadable files for MSWin32.
-  - A safer CSV example
+  - A safer CSV example in Example 1
+  - Grammatical/typo fixes in POD.
 
 0.752     2019-01-02 20:25:16-08:00 America/Los_Angeles
   - One test fails for superuser. Fixing that.
